--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root@localhost:3306/issue_tracker"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="OlECW85zc5khRsYbrdXwgYWPrYL72P3I6nl/tgB8vU8="
